@@ -9,10 +9,10 @@
     <name>store Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
-    <!--    <properties>-->
-    <!--        <maven.compiler.source>13</maven.compiler.source>-->
-    <!--        <maven.compiler.target>13</maven.compiler.target>-->
-    <!--    </properties>-->
+    <properties>
+        <maven.compiler.source>13</maven.compiler.source>
+        <maven.compiler.target>13</maven.compiler.target>
+    </properties>
 
     <dependencies>
 
@@ -27,6 +27,21 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>br.com.caelum.stella</groupId>
+            <artifactId>caelum-stella-core</artifactId>
+            <version>2.1.2</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>br.com.alura.maven</groupId>
+            <artifactId>products</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
 
@@ -45,9 +60,9 @@
                 <version>3.8.1</version>
                 <configuration>
                     <release>13</release>
-                    <!--                    <compilerArgs>-->
-                    <!--                        <arg>&#45;&#45;enable-preview</arg>-->
-                    <!--                    </compilerArgs>-->
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -55,23 +70,23 @@
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>10.0.0.alpha1</version>
-                <!--                <configuration>-->
-                <!--                    <jvmArgs>&#45;&#45;enable-preview</jvmArgs>-->
-                <!--                </configuration>-->
+                <configuration>
+                    <jvmArgs>${jvmArgs} --enable-preview</jvmArgs>
+                </configuration>
             </plugin>
 
-            <!--            <plugin>-->
-            <!--                <groupId>org.apache.tomcat.maven</groupId>-->
-            <!--                <artifactId>tomcat7-maven-plugin</artifactId>-->
-            <!--                <version>2.2</version>-->
-            <!--                <configuration>-->
-            <!--                    <url>http://localhost:8080/store</url>-->
-            <!--                    <server>TomcatServer</server>-->
-            <!--                    <path>store</path>-->
-            <!--                    <username>admin</username>-->
-            <!--                    <password>admin</password>-->
-            <!--                </configuration>-->
-            <!--            </plugin>-->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8080/store</url>
+                    <server>TomcatServer</server>
+                    <path>store</path>
+                    <username>admin</username>
+                    <password>admin</password>
+                </configuration>
+            </plugin>
 
 
         </plugins>
